# MIDI-MCSTRUCTURE_NEXT

./: .gitignore  README.en.md  README.md  builder.py  database.py  log.py  main.py  midi_reader.py  pyproject.toml  tools.py  ui_manager.py  update.json  updater.py  writer.py
Asset/text/: default_profile.json  manifest.json  mapping.json  profile.json  setting.json
