[project]
name = "midi-mcsstructure_next"
version = "1.5.1"
description = "MIDI to .mcstructure or .mcfunction."
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "py7zr>=1.0.0",
    "pygame>=2.6.1",
    "pyinstaller>=6.17.0",
    "pynbt>=3.1.0",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
