[project]
name = "mms-next-project"
version = "1.7.1"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "amulet-nbt>=2.1.5",
    "mido>=1.3.3",
    "pygame-ce>=2.5.6",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
